#5 サンプルコード相当のものを書き写した
flutterの出力ではそれらしきログが表示されているが不明

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   hive_flutter: any # contains the binaries
   path_provider: any
 
+  uuid: 2.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
